fix(notepad): Different font size on Safari and Chrome for text blocks

--- a/src/scss/note.scss
+++ b/src/scss/note.scss
@@ -3,7 +3,7 @@
   font-weight: 400;
   font-style: normal;
   font-size: 18px;
-  line-height: 1.7rem;
+  line-height: 30px;
   color: rgba(12, 10, 10, 0.8);
 }
 
